[package]
name = "yuepin"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/rivertwilight/rust-yuepin"
keywords = ["chinese", "cantonese", "yuepin", "cli"]
readme="README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.94"
