[package]
name = "yuepin"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/rivertwilight/rust-yuepin"
description = "Convert between Chinese charcter and Jyutping. | 中文与粤语拼音互转"
keywords = ["chinese", "cantonese", "yuepin", "cli"]
categories = ["text-processing", "localization", "parser-implementations"]
readme="README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.94"
